# HMX-Server

./: Readme.txt
Resource/: map_info.xml
Resource/Scene/: main_scene.xml
Resource/Zone/: main_zone.xml
Source/: CMakeLists.txt
Source/config/: twp_autolink.h  twp_platform_config.h
Source/doc/: 切换场景.docx  功能列表.txt  服务器默认参数.doc  游戏世界框架.uml  游戏世界框架.~ml  登录流程.doc  进入场景流程.doc  退出流程.doc
Source/servers/: CMakeLists.txt
Source/servers/Client/: CMakeLists.txt  ClientCommand.cpp  ClientNetHandler.cpp  ClientNetHandler.h  ClientPlayer.cpp  ClientPlayer.h  NetMsgHandler.cpp  NetMsgHandler.h  c_main.cpp
Source/servers/DBServer/: CMakeLists.txt  ClientCommand.cpp  ClientCommand.h  Config.h  ForSClientMsgHandler.cpp  ForSClientMsgHandler.h  ForServerMsgHandler.cpp  ForServerMsgHandler.h  MemoryManger.cpp  MemoryManger.h  ProcServerHandler.cpp  ProcServerHandler.h  ProcWorldHandler.cpp  ProcWorldHandler.h  RsyncTools.cpp  RsyncTools.h  TableCharacter.h  dp_cfg.xml  dp_main.cpp
Source/servers/DyNetMysql/: DbConfig.h  DbConnManager.cpp  DbConnManager.h  DbField.cpp  DbField.h  DbIncludes.h  DbMysql.cpp  DbMysql.h  DbRecord.cpp  DbRecord.h  DbRecordSet.cpp  DbRecordSet.h  DbRequest.h  DbResult.h
Source/servers/DyNetSocket/: NetClient.cpp  NetClient.h  NetConfig.h  NetIOBuffer.cpp  NetIOBuffer.h  NetServer.cpp  NetServer.h  NetSocket.cpp  NetSocket.h
Source/servers/GameClient/: BaseScene.h  ClientCommand.cpp  ClientCommand.h  ClientNetHandler.cpp  ClientNetHandler.h  ClientPlayer.cpp  ClientPlayer.h  Config.h  FTextInput.h  GameClient_PCH.cpp  GameClient_PCH.h  KeyLogin.h  LoginScene.cpp  LoginScene.h  Main.cpp  NetMsgHandler.cpp  NetMsgHandler.h
Source/servers/GameServer/: Base.h  Buff.cpp  Buff.h  CMakeLists.txt  Config.h  CounterCtrl.cpp  CounterCtrl.h  Creature.cpp  Creature.h  DataRsyncTools.cpp  DataRsyncTools.h  Entity.cpp  Entity.h  ForSClientMsgHandler.cpp  ForSClientMsgHandler.h  GameServer_PCH.h  GeneralScene.cpp  GeneralScene.h  InstanceScene.cpp  InstanceScene.h  Makefile  ProcClientHandler.cpp  ProcClientHandler.h  ProcDpHandler.cpp  ProcDpHandler.h  ProcWorldHandler.cpp  ProcWorldHandler.h  QuestCtrl.cpp  QuestCtrl.h  RelationCtrl.cpp  RelationCtrl.h  ResourceMgr.cpp  ResourceMgr.h  SceneChannel.cpp  SceneChannel.h  SceneMap.cpp  SceneMap.h  SceneRegion.cpp  SceneRegion.h  SceneUser.cpp  (+16 more)
Source/servers/GatewayServer/: CMakeLists.txt  Config.h  ForClientMsgHandler.cpp  ForClientMsgHandler.h  ForSClientMsgHandler.cpp  ForSClientMsgHandler.h  ForServerMsgHandler.cpp  ForServerMsgHandler.h  GatewayServer_PCH.h  Makefile  ProcWorldHandler.cpp  ProcWorldHandler.h  fep_cfg.xml  fep_main.cpp
Source/servers/HelpTools/: CMakeLists.txt  HelpTools_PCH.h  StockCrawl.cpp  StockCrawl.h  ht_main.cpp
Source/servers/LogServer/: CMakeLists.txt  ForSClientMsgHandler.cpp  ForSClientMsgHandler.h  ForServerMsgHandler.cpp  ForServerMsgHandler.h  ProcServerHandler.cpp  ProcServerHandler.h  log_main.cpp
Source/servers/LoginServer/: CMakeLists.txt  Config.h  ForSClientMsgHandler.cpp  ForSClientMsgHandler.h  LoginAccountMgr.h  LoginServer_PCH.h  Makefile  NamesManager.h  ProcClientHandler.cpp  ProcClientHandler.h  ProcDpHandler.cpp  ProcDpHandler.h  ProcWorldHandler.cpp  ls_main.cpp
Source/servers/Shared/: CMakeLists.txt
Source/servers/Shared/CommonDef/: BaseDefine.h  BaseMsgHandler.h  BaseProcHandler.h  BaseSession.h  ClientSession.cpp  ClientSession.h  CommonBags.h  CommonC2S.h  CommonCharacter.cpp  CommonCharacter.h  CommonDefine.h  CommonError.h  CommonFriends.h  CommonInternal.h  CommonQuest.h  CommonS2C.h  CommonS2S.h  CommonS2W.h  CommonServerOpt.h  CommonW2S.h  ServerClientCommon.h  ServerConnectMgr.cpp  ServerConnectMgr.h  ServerSession.cpp  ServerSession.h  ServerStatistic.cpp  ServerStatistic.h  SharedIncludes.h  def_buff.h  def_channel.h  def_entity.h  def_resource.h
Source/servers/Shared/Protocol/: character.pb.cc  character.pb.h  character.proto
Source/servers/Shared/Utility/: AttributeOffsetC.h  DeallineAsync.cpp  DeallineAsync.h  Encrypt.cpp  Encrypt.h  Geometry.cpp  Geometry2D.h  LogManager.cpp  LogManager.h  MemoryPool.h  ObjPool.cpp  ObjPool.h  ResourceBuffer.cpp  ResourceBuffer.h  Utility.h  typedef.h
Source/servers/WorldServer/: CMakeLists.txt  Config.h  ForServerMsgHandler.cpp  ForServerMsgHandler.h  Makefile  MySortTemplate.h  ProcClientHandler.cpp  ProcClientHandler.h  ProcDpHandler.cpp  ProcDpHandler.h  ProcFepHandler.cpp  ProcFepHandler.h  ProcLsHandler.cpp  ProcLsHandler.h  ProcSsHandler.cpp  ProcSsHandler.h  SceneInfoManger.cpp  SceneInfoManger.h  ServerInfoMgr.cpp  ServerInfoMgr.h  SortsManager.cpp  SortsManager.h  Statistic.cpp  Statistic.h  UserManager.cpp  UserManager.h  WorldServer_PCH.h  ws_main.cpp
Source/sql/: swa_data.sql
protobuf-3.0.0/: 下载protubuf-3.0.0编译.txt  批量生成.bat
